kubernetes/system/monitoring/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
    - name: private
      namespace: argocd
      sectionName: private-https
  hostnames:
    - grafana.home.547600.xyz
  rules:
    - backendRefs:
        - name: monitoring-grafana
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-http-redirect
  namespace: monitoring
spec:
  parentRefs:
    - name: private
      namespace: argocd
      sectionName: private-http
  hostnames:
    - grafana.home.547600.xyz
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
